--- a/SliderCam/platformio.ini
+++ b/SliderCam/platformio.ini
@@ -8,7 +8,10 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
+
+
 [env:uno]
+lib_ldf_mode = chain
 platform = atmelavr
 board = uno
 framework = arduino
